--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
   "name": "pixellab-website",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.6.3",
+    "@mui/material": "^5.7.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.0.1",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
+    "latest-version": "^6.0.0",
+    "netlify-cli": "^10.7.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-google-recaptcha": "^2.1.0",
+    "react-hot-toast": "^2.2.0",
+    "react-jss": "^10.9.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
