--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pixellab-website",
+  "name": "spitha-website",
   "version": "0.2.0",
   "private": true,
   "dependencies": {
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.1",
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
+    "framer-motion": "^7.6.2",
     "latest-version": "^6.0.0",
     "netlify-cli": "^10.7.1",
     "react": "^18.0.0",
